--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -106,7 +106,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .container {
+    .privacy-policy-container {
         padding: 0 15px;
     }
 
