--- a/css/cookies-policy.css
+++ b/css/cookies-policy.css
@@ -158,7 +158,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .container {
+    .cookies-policy-container {
         padding: 0 15px;
     }
 
