use common stylesheet for static pages styling

--- a/css/about.css
+++ b/css/about.css
@@ -1,16 +1,4 @@
-/* Reset and Base Styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    color: #333;
-    line-height: 1.6;
-    background-color: #fff;
-}
+/* About UsStyles */
 
 .about-container {
     max-width: 970px;
