--- a/css/quality-assurance.css
+++ b/css/quality-assurance.css
@@ -1,5 +1,5 @@
-/* Hero Section Background Image for Quality Assurance Page */
-.hero-section {
+/* Quality Assurance Page Styles */
+ .quality-assurance-hero-section {
     background-image: url('https://www.bastionpacific.com.au/SSP%20Applications/Bastion%20Pacific%20SCA/Development/img/1%20copy@2x.png');
     background-size: cover;
     background-position: center;
