--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif !important;
   font-size: 16px;
   line-height: 1.6;
   color: var(--bastion-dark);
